# lexodus

./: .dockerignore  .env.development  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  README.md  config.example.toml  docker-compose.yml  fly.toml  openapi-description.json  project_snapshot.txt
crates/app/: Cargo.toml
crates/app/assets/: app.css  design-tokens.css  theme-base.css
crates/app/assets/themes/: chambers.css  cyberpunk.css  federal.css  parchment.css  solarized.css
crates/app/src/: auth.rs  billing_listener.rs  format_helpers.rs  main.rs  notify.rs  tier_gate.rs
crates/app/src/components/: mod.rs  scope_toggle.rs
crates/app/src/routes/: activate.rs  command_palette.css  command_palette.rs  dashboard.rs  device_auth.rs  district_picker.css  district_picker.rs  forgot_password.rs  layout.css  lexodus_dashboard.rs  login.css  login.rs  mod.rs  not_found.css  not_found.rs  privacy.css  privacy.rs  products.css  products.rs  register.rs  reset_password.rs  terms.rs  users.css  users.rs
crates/app/src/routes/attorneys/: create.rs  detail.rs  form_sheet.rs  list.rs  mod.rs
crates/app/src/routes/calendar/: create.rs  detail.rs  form_sheet.rs  list.rs  mod.rs
crates/app/src/routes/cases/: create.rs  detail.rs  form_sheet.rs  list.rs  mod.rs  workflow_panel.css  workflow_panel.rs
crates/app/src/routes/compliance/: compliance.css  mod.rs
crates/app/src/routes/dashboard/: attorney.css  attorney.rs  clerk.css  clerk.rs  dashboard.css  judge.css  judge.rs  mod.rs
crates/app/src/routes/deadlines/: create.rs  detail.rs  form_sheet.rs  list.rs
crates/app/src/routes/defendants/: detail.rs  form_sheet.rs  list.rs
crates/app/src/routes/docket/: detail.rs  list.rs
crates/app/src/routes/documents/: detail.rs  list.rs
crates/app/src/routes/evidence/: detail.rs  form_sheet.rs  list.rs
crates/app/src/routes/filings/: detail.rs  list.rs
crates/app/src/routes/judges/: detail.rs  form_sheet.rs  list.rs
crates/app/src/routes/opinions/: detail.rs  form_sheet.rs  list.rs
crates/app/src/routes/orders/: detail.rs  form_sheet.rs  list.rs
crates/app/src/routes/parties/: detail.rs  form_sheet.rs  list.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  config.rs  db.rs  error_convert.rs  health.rs  lib.rs  mailgun.rs  nef_delivery.rs  openapi.rs  rate_limit.rs  s3.rs  search.rs  telemetry.rs  tenant.rs  twilio.rs  typst.rs
crates/server/src/api/: account.rs  admin.rs  attorney.rs  auth.rs  bar_admin.rs  calendar.rs  case.rs  civil_case.rs  court.rs  deadline.rs  docket.rs  document.rs  evidence.rs  filing.rs  judge.rs  membership.rs  mod.rs  opinion.rs  order.rs  party.rs  pdf.rs  queue.rs  search.rs  sentencing.rs  speedy_trial.rs  victim.rs
crates/server/src/auth/: cookies.rs  court_role.rs  device_flow.rs  extractors.rs  jwt.rs  middleware.rs  mod.rs  oauth.rs  oauth_callback.rs  oauth_state.rs  password.rs
crates/server/src/compliance/: condition_evaluator.rs  deadline_engine.rs  engine.rs  mod.rs
crates/server/src/repo/: attachment.rs  attorney.rs  bar_admission.rs  billing.rs  bop_designation.rs  calendar.rs  case.rs  case_assignment.rs  case_event.rs  case_note.rs  charge.rs  civil_case.rs  cja_appointment.rs  config_override.rs  conflict_check.rs  court_role_request.rs  custody_transfer.rs  deadline.rs  deadline_reminder.rs  defendant.rs  discipline.rs  docket.rs  document.rs  document_event.rs  draft_comment.rs  ecf_registration.rs  event.rs  evidence.rs  extension_request.rs  feature_flag.rs  federal_admission.rs  fee_schedule.rs  filing.rs  headnote.rs  judge.rs  judge_conflict.rs  mod.rs  motion.rs  nef.rs  opinion.rs  (+21 more)
crates/server/src/rest/: admin.rs  attachment.rs  attorney.rs  calendar.rs  case.rs  case_note.rs  charge.rs  civil_case.rs  compliance.rs  config.rs  conflict_check.rs  deadline.rs  defendant.rs  docket.rs  document.rs  event.rs  evidence.rs  extension.rs  feature.rs  federal_rule.rs  fee_schedule.rs  filing.rs  judge.rs  membership.rs  mod.rs  motion.rs  nef.rs  opinion.rs  order.rs  party.rs  pdf.rs  queue.rs  reminder.rs  representation.rs  representation_ext.rs  rule.rs  sentencing.rs  service_record.rs  signature.rs  speedy_trial.rs  (+4 more)
crates/server/src/storage/: mod.rs
crates/server/src/stripe/: checkout.rs  client.rs  mod.rs  portal.rs  realtime.rs  sync.rs  webhooks.rs
crates/server/tests/: api_tests.rs  auth_tests.rs
crates/server/tests/common/: mod.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: attorney.rs  billing.rs  calendar.rs  case.rs  civil_case.rs  common.rs  compliance.rs  config.rs  deadline.rs  docket.rs  document.rs  error.rs  event.rs  feature_flags.rs  judge.rs  lib.rs  models.rs  opinion.rs  order.rs  party.rs  queue.rs  requests.rs  rule.rs  search.rs  sentencing.rs  speedy_trial.rs  todo.rs  victim.rs
crates/shared-ui/: Cargo.toml
crates/shared-ui/assets/: cyberpunk-theme.css
crates/shared-ui/src/: lib.rs  theme.rs
crates/shared-ui/src/components/: mod.rs
crates/tests/: Cargo.toml
crates/tests/src/: admin_tests.rs  attachment_create_tests.rs  attachment_isolation_tests.rs  attachment_list_tests.rs  attachment_s3_tests.rs  attorney_bar_number_tests.rs  attorney_bulk_status_tests.rs  attorney_create_tests.rs  attorney_delete_tests.rs  attorney_get_tests.rs  attorney_isolation_tests.rs  attorney_list_tests.rs  attorney_pagination_tests.rs  attorney_search_tests.rs  attorney_update_tests.rs  billing_tests.rs  calendar_case_tests.rs  calendar_create_tests.rs  calendar_delete_tests.rs  calendar_search_tests.rs  calendar_status_tests.rs  case_create_tests.rs  case_delete_tests.rs  case_get_tests.rs  case_isolation_tests.rs  case_search_tests.rs  case_status_tests.rs  civil_case_create_tests.rs  civil_case_isolation_tests.rs  civil_case_search_tests.rs  common.rs  compliance_integration_tests.rs  compliance_wiring_tests.rs  condition_evaluator_tests.rs  cross_court_demo_tests.rs  deadline_create_tests.rs  deadline_delete_tests.rs  deadline_engine_tests.rs  deadline_get_tests.rs  deadline_isolation_tests.rs  (+38 more)
docs/: roles.md
(+890 files in other folders)
