[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
shared-types = { path = "../shared-types" }
shared-ui = { path = "../shared-ui" }
server = { path = "../server" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dioxus-free-icons = { version = "0.10", features = ["lucide"] }
dioxus-sdk-notification = { version = "0.7", optional = true }
tower-http = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
server = ["server/server", "dioxus/server", "dep:tower-http", "dep:axum", "dep:tokio", "dep:sqlx"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:dioxus-sdk-notification"]
mobile = ["dioxus/mobile"]
