[package]
name = "shared-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
dioxus-primitives = { workspace = true }
dioxus-free-icons = { workspace = true }
time = "0.3"

[dev-dependencies]
dioxus-ssr = { workspace = true }
pretty_assertions = { workspace = true }
